style.css
:root{
    --dark-color: #1f2022ff;
    --darkLight-color: #2b2d31ff;
    --light-color: #303338ff;
    --lightLight-color: #383a40ff;
}

*{
    box-sizing: border-box;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

html, body{
    background-color: var(--darkLight-color);
    overflow: none;
    width: 100%;
    height: 100dvh;
    margin: 0px;
}

h1{
    color: #ffffffff;
}

h2{
    color: #ffffffff;
    font-size: 15px;
}

h3{
    color: #868c94ff;
    font-size: 10px;
}

.welcome{
    background-color: var(--lightLight-color);
    z-index: 1;
    width: 100vw;
    height: 100vh;
    position: absolute;
    left: 0px;
    top: 0px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.welcomeBox{
    background-color: var(--darkLight-color);
    height: 1100px;
    width: 800px;
    display: grid;
    grid-template-rows: 150px 1fr 100px;
    grid-template-columns: 1fr;
    border-radius: 20px;
    overflow: hidden;
}

.welcomeText{
    background-color: var(--darkLight-color);
    height: 100%;
    width: 100%;
    display: flex;
    padding-top: 5px;
    padding-bottom: 20px;
    padding-left: 40px;
    padding-right: 40px;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    overflow-y: scroll;
    overflow-x: hidden;
}

.welcomeText h2{
    font-size: 35px;
    margin-top: 10px;
    text-align: center;
}

.welcomeText p{
    font-size: 20px;
    text-align: center;
}

.welcomeText a, .welcomeText a:link, .welcomeText a:visited{
    color: #005EEA;
}

.welcomeTopBar{
    background: #00ef00;
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 5px;
    padding-bottom: 5px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    margin-bottom: 10px;
}

.welcomeTopBarText{
    color: white;
    font-size: 85px;
}



.useOptions{
    align-self: center;
    justify-self: center;
    width: 100%;
    height: 100%;
    grid-row: 3 / 4;
    grid-column: 1 / 2;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 100%;
    background-color: white;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 0xp;
    gap: 10px;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
    background-color: var(--dark-color);
}

.useOption{
    display: flex;
    align-self: center;
    justify-self: center;
    align-items: center;
    justify-content: center;
    background-color: var(--light-color);
    border-radius: 20px;
    border: none;
    padding: 10px;
    width: 100%;
    height: 70%;
    margin-bottom: 10px;
    margin-top: 10px;
    color: white;
    font-size: 125%;
}

.useOption:hover{
    background-color: var(--lightLight-color);
}

.useOption:active{
    background-color: var(--darkLight-color);
}

.topBar{
    grid-row: 1 / 2;
    grid-column: 1 / 5;
    display: flex;
    align-items: flex-start;
    justify-items: flex-start;
}

.topImage{
    height: 9px;
    padding-left: 10px;
    width: 85px;
    content: url("images/textIcon.png");
}

.mainSection{
    grid-row: 2/4;
    grid-column: 1 / 5;
}

.main{
    display: block;
    position: absolute;
    left: 0px;
    top: 0px;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
}

.login{
    z-index: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    position: absolute;
    width: 100vw;
    height: 100vh;
    left: 0px;
    top: 0px;
    overflow: hidden;
    background-color: var(--light-color);
}

.container{
    display: grid;
    grid-template-columns: 80px 250px 1fr 250px;
    grid-template-rows: 9px calc(100vh - 109px) 100px;
    grid-auto-flow: dense;
}

.loginBox{
    z-index: 1;
    display: flex;
    background-color: var(--darkLight-color);
    border-color: var(--darkLight-color);
    border-width: 5%;
    border-radius: 10px;
    height: 60%;
    width: 40%;
    transition: 0.5s;
    justify-content: center;
    align-items: center;
}

.loginPageButton{
    background-color: #00000000;
    height: 100%;
    width: 100%;
    border-radius: 10px;
    border-width: 0px;
    outline-width: 0px;
    transition: 0.125s;
}

.loginPageButton:hover, :focus{
    background-color: var(--dark-color);
}

.loginText{
    color: #ffffffff;
    margin: 0px;
    font-size: 100%;
}

.loginInputs{
    background-color: var(--light-color);
    width: 40%;
    height: 50%;
    overflow: auto;
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding-top: 10px;
    padding-bottom: 15px;
}

.loginInput{
    background-color: var(--darkLight-color);
    height: 50px;
    width: 96%;
    border-radius: 10px;
}

.loginActionGroup{
    width: 96%;
    height: 200px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.loginTextInput{
    color: #ffffffff;
    margin: 0px;
    height: 100%;
    width: 100%;
    outline-width: 0px;
    border-width: 0px;
    background-color: #00000000;
    text-align: center;
    font-size: 15px;
    border-radius: 15px;
}

.loginTextInput::-ms-reveal{
    display: none;
}

.loginInputSeperator{
    height: 10px;
    border-radius: 5px;
    background-color: var(--dark-color);
    border: none;
    width: 60%;
    margin-top: 15px;
    margin-bottom: 15px;
}

.createAccountBox{
    position: absolute;
    z-index: -1;
    display: flex;
    background-color: var(--darkLight-color);
    border-color: var(--darkLight-color);
    border-width: 5%;
    border-radius: 10px;
    height: 60%;
    width: 40%;
    transition: 0.5s;
    justify-content: center;
    align-items: center;
}

.createAccountInputs{
    background-color: var(--light-color);
    position: absolute;
    left: 20%;
    top: 6.875%;
    margin-top: 5%;
    width: 60%;
    height: 75%;
    overflow: auto;
    border-radius: 10px;
}
/* ... */

